2012-02-08  Antaryami Pandia  <antaryami.pandia@motorola.com>

        CSS2 overflow: scrollbar not visible on SELECT elements when overflow: scroll is set.
        https://bugs.webkit.org/show_bug.cgi?id=69993

        Reviewed by Simon Fraser.

        The issue was that for overflow:scroll, currently webkit always places the horizontal
        and vertical scrollbar. But Since the listbox renderer handles its scrolling,
        we should not set scrollbar for list-box.

        Tests: fast/css/getComputedStyle/computed-style-select-overflow.html
               fast/forms/select-overflow-scroll-inherited.html
               fast/forms/select-overflow-scroll.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::layoutBlock):
        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::updateScrollInfoAfterLayout):

2012-02-08  Nikolas Zimmermann  <nzimmermann@rim.com>

        feImage doesn't invalidate when its target SVG element is animated
        https://bugs.webkit.org/show_bug.cgi?id=73860

        Reviewed by Dirk Schulze.

        Consider following testcase:
        <defs>
            <rect id="rect" fill="red" width="50" height="50"/>
            <filter id="filter">
                <feImage xlink:href="#rect"/>
            </filter>
        </defs>
        <rect width="50" height="50" filter="url(#filter)"/>

        If the <rect id="rect"> gets changed dynamically (attribute/property/style change) the <feImage>
        doesn't notice this, as there's no link between the <rect> and the <feImage>, as the <rect> is not
        a child of the <feImage/>. To get invalidations working for these situations, we have to track
        the referencingElement & referencedElement in SVGDocumentExtensions.

        Fixes parts the SVG-Wow twirl testcase and David Daileys SVG waves example.

        Tests: svg/filters/feImage-animated-transform-on-target-rect.svg
               svg/filters/feImage-late-indirect-update.svg